data/all_generated_tests/raw_wast_tests/nop_InvalidorInconsistentControlFlowGraph_492.wast
;; 3. **Test Description**: Insert multiple `nop` instructions within a loop body, particularly before and after `br` (branch) instructions.    **Constraint Checked**: Validates invariant loop CFG despite `nop` placements.    **Relation to CFG**: Ensures loops iterate correctly without `nop` altering loop exit or branch conditions.

(assert_invalid
  (module
    (func $test-loop (loop $L (nop) (br $L) (nop)))
  )
  "type mismatch"
)